Add StringUtils class Add method normalizeServiceScheduleName which upperCase 1st Char add Abbreviations. Set is hardcoded now